--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ cryptography>=44.0.0
 # Configuration and Templates
 PyYAML>=6.0.0
 Jinja2>=3.1.0
+python-dotenv>=1.0.0  # Load .env files
 
 # Testing
 pytest>=8.3.0
